22062023_licenta/flaskapp/ctfplatform_deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: ctfspace
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
  selector:
    app: flask
