22062023_licenta/flaskapp/ctfplatform_deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #annotations:
    #cert-manager.io/cluster-issuer: test-ca-cluster-issuer
  name: flask-ingress
  namespace: ctfspace
spec:
  rules:
  - host: flask.192.168.49.2.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: flask-service
            port:
              number: 8080
  # tls:
  # - hosts:
  #   - flask.192.168.49.2.nip.io
  #   secretName: myingress-cert
